pref: 54.螺旋矩阵题解

--- a/每周的题解/第三周.md
+++ b/每周的题解/第三周.md
@@ -1,9 +1,7 @@
-# 20周200道|第三周|okkjoo-leetcodeHot-byJs
+# 20 周 200 道|第三周|okkjoo-leetcodeHot-byJs
 
 > `okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周一更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
 > 如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
-
-
 
 这是第三周的刷题记录与题解分享
 
@@ -18,7 +16,6 @@
 > 岛屿总是被水包围，并且每座岛屿只能由水平方向和/或竖直方向上相邻的陆地连接形成。
 >
 > 此外，你可以假设该网格的四条边均被水包围。
->
 
 ### 解题思路
 
@@ -47,7 +44,7 @@ var numIslands = function (grid) {
 	if (rows === 0) return 0;
 	for (let i = 0; i < rows; i++) {
 		for (let j = 0; j < cols; j++) {
-			if (grid[i][j] === "1") {
+			if (grid[i][j] === '1') {
 				dfs(grid, i, j);
 				cnt++;
 			}
@@ -58,9 +55,9 @@ var numIslands = function (grid) {
 const dfs = (grid, i, j) => {
 	const rows = grid.length,
 		cols = grid[0].length;
-	if (i < 0 || j < 0 || i > rows - 1 || j > cols - 1 || grid[i][j] == "0")
+	if (i < 0 || j < 0 || i > rows - 1 || j > cols - 1 || grid[i][j] == '0')
 		return;
-	grid[i][j] = "0";
+	grid[i][j] = '0';
 	const d = [
 		[1, 0],
 		[0, 1],
@@ -75,8 +72,7 @@ const dfs = (grid, i, j) => {
 
 ### 题目描述
 
-> 给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target  ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
->
+> 给定一个 n 个元素有序的（升序）整型数组 nums 和一个目标值 target ，写一个函数搜索 nums 中的 target，如果目标值存在返回下标，否则返回 -1。
 
 ### 解题思路
 
@@ -85,7 +81,7 @@ const dfs = (grid, i, j) => {
 粗略的二分步骤：
 
 1. [left, right]
-2. 左右指针，取左右指针中值 
+2. 左右指针，取左右指针中值
 3. 取到的值
    1. 大于 target 就将右指针位移到中值位置 (-1)
    2. 小于就将左指针移到中值位置 (+1)
@@ -119,14 +115,13 @@ var search = function (nums, target) {
 	return -1;
 };
 // @lc code=end
-
 ```
 
 ## [21. 合并两个有序链表](https://leetcode.cn/problems/merge-two-sorted-lists/)|简单|递归|链表
 
 ### 题目描述
 
-> 将两个升序链表合并为一个新的升序链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。 
+> 将两个升序链表合并为一个新的升序链表并返回。新链表是通过拼接给定的两个链表的所有节点组成的。
 
 ### 解题思路
 
@@ -134,7 +129,7 @@ var search = function (nums, target) {
 
 其实这里真的挺妙的，看起来没有排序的代码，实际上藏在递归之中，每次归都是返回的 其实就是 **排序好的了**
 
-时间复杂度O(n),空间复杂度O(n)，n 为两个链表长度的合
+时间复杂度 O(n),空间复杂度 O(n)，n 为两个链表长度的合
 
 ```js
 /**
@@ -162,8 +157,6 @@ var mergeTwoLists = function (list1, list2) {
 };
 ```
 
-
-
 ## [300. 最长递增子序列](https://leetcode.cn/problems/longest-increasing-subsequence/)|中等|dp|二分查找
 
 ### 题目描述
@@ -174,10 +167,10 @@ var mergeTwoLists = function (list1, list2) {
 
 ### 解题思路
 
-- `dp[i]`: 包括i 的之前最长递增子序列
-- 状态转移：dp[i] = max(dp[i], dp[j] + 1)   	(前提：nums[i] > nums[j])
+- `dp[i]`: 包括 i 的之前最长递增子序列
+- 状态转移：dp[i] = max(dp[i], dp[j] + 1) (前提：nums[i] > nums[j])
   - j 从 0 到 i -1 各个位置的最长递增子序列长度 最大值 + 1
-- dp[i] 的初始值都为1
+- dp[i] 的初始值都为 1
 
 每一次都要看看 res 要不要更新
 
@@ -219,7 +212,7 @@ var lengthOfLIS = function (nums) {
 
 cnt 就是当前拿了的全部硬币的值
 
-但是纯贪心的不一定对的，比如`[1,6,10]`，`amount = 12`，你从最大开始，就会是一个10，两个1，总共三个硬币。而实际上直接两个6就能达到目标~
+但是纯贪心的不一定对的，比如`[1,6,10]`，`amount = 12`，你从最大开始，就会是一个 10，两个 1，总共三个硬币。而实际上直接两个 6 就能达到目标~
 
 #### 暴力枚举
 
@@ -231,10 +224,10 @@ cnt 就是当前拿了的全部硬币的值
 
 用 dp 数组将其存储下来，也有叫记忆化递归的，没差
 
-- 定义：`dp[i][j]`就是拿前j个硬币来组成金额 i 的最少个数
+- 定义：`dp[i][j]`就是拿前 j 个硬币来组成金额 i 的最少个数
 - 状态转移：
-  -  `dp[i][j]=min(dp[i][j-1], dp[i - coins[j-1]][j] + 1)`
-    - 选了也要和`之前不选j 就能组成i` 的情况比较一下，选j的话就是 ，金额为`i-coins[j-1]`（也就是还没有选第j个硬币)时 + 1(选j)
+  - `dp[i][j]=min(dp[i][j-1], dp[i - coins[j-1]][j] + 1)`
+  - 选了也要和`之前不选j 就能组成i` 的情况比较一下，选 j 的话就是 ，金额为`i-coins[j-1]`（也就是还没有选第 j 个硬币)时 + 1(选 j)
 
 时间复杂度`O(coins.length*amonut)`，空间同上
 
@@ -243,8 +236,8 @@ cnt 就是当前拿了的全部硬币的值
 - `dp[i]`表示 金额为 i 的时候，需要的最少硬币数
 - 初始化 `dp[0]=0`
 - 状态转移：
-  - 不拿第j个  `dp[i]`
-  - 拿第j个 `dp[i - coins[j]] + 1`
+  - 不拿第 j 个 `dp[i]`
+  - 拿第 j 个 `dp[i - coins[j]] + 1`
 
 > 其实就是完全背包问题
 
@@ -271,8 +264,6 @@ var coinChange = function (coins, amount) {
 };
 ```
 
-
-
 ## [22. 括号生成](https://leetcode.cn/problems/generate-parentheses/)|中等|回溯|剪枝
 
 ### 题目描述
@@ -288,7 +279,7 @@ var coinChange = function (coins, amount) {
 - 有效的
 - 组合
 
-一眼回溯 
+一眼回溯
 
 回溯必备的优化手段：剪枝，那么这里应该怎么剪枝？
 
@@ -312,10 +303,10 @@ var generateParenthesis = function (n) {
 	const dfs = (l, r, s) => {
 		if (l == n && r == n) return res.push(s);
 		if (l < r) return;
-		if (l < n) dfs(l + 1, r, s + "(");
-		if (r < l) dfs(l, r + 1, s + ")");
+		if (l < n) dfs(l + 1, r, s + '(');
+		if (r < l) dfs(l, r + 1, s + ')');
 	};
-	dfs(0, 0, "");
+	dfs(0, 0, '');
 	return res;
 };
 ```
@@ -339,9 +330,10 @@ var generateParenthesis = function (n) {
 
 每走完一圈，left++、top++、right--、bottom--
 
+**注意**
+注意代码里的`if (left < right && top < bottom) {`，因为这里是从左到右再从上到下，后面的从右到左，从下到上实际上就是前面两步反过来一次，大部分情况是刚好围成一个矩形的。但是如果`left === right || top === bottom`的话，那就是只剩一行或者一列的情况，前面两步反过来一遍的话就会有重复
 
-
-时间复杂度O(mn)，空间复杂度O(1)
+时间复杂度 O(mn)，空间复杂度 O(1)
 
 ### 代码
 
@@ -383,4 +375,3 @@ var spiralOrder = function (matrix) {
 	return order;
 };
 ```
-
