feat: lc 817. 链表组件

--- a/每周的题解/13.md
+++ b/每周的题解/13.md
@@ -42,3 +42,44 @@ var areAlmostEqual = function (s1, s2) {
 	return false;
 };
 ```
+
+## 817. 链表组件
+
+### 题目描述
+
+```
+给定链表头结点 head，该链表上的每个结点都有一个 唯一的整型值 。同时给定列表 nums，该列表是上述链表中整型值的一个子集。
+
+返回列表 nums 中组件的个数，这里对组件的定义为：链表中一段最长连续结点的值（该值必须在列表 nums 中）构成的集合。
+```
+
+### 解题思路
+
+遍历链表，一直都是在 nums 中的话就是一块，有一个不是就切割开
+
+### 代码
+
+```js
+/**
+ * @param {ListNode} head
+ * @param {number[]} nums
+ * @return {number}
+ */
+var numComponents = function (head, nums) {
+	const set = new Set(nums);
+	let cur = head,
+		cnt = 0,
+		flag = 0;
+	while (cur !== null) {
+		if (set.has(cur.val)) {
+			flag = 1;
+		} else if (flag === 1) {
+			cnt++;
+			flag = 0;
+		}
+		cur = cur.next;
+	}
+	if (flag === 1) cnt++;
+	return cnt;
+};
+```
