--- a/每周的题解/13.md
+++ b/每周的题解/13.md
@@ -83,3 +83,23 @@ var numComponents = function (head, nums) {
 	return cnt;
 };
 ```
+
+## 769. 最多能完成排序的块
+
+### 题目描述
+
+```
+给定一个长度为 n 的整数数组 arr ，它表示在 [0, n - 1] 范围内的整数的排列。
+
+我们将 arr 分割成若干 块 (即分区)，并对每个块单独排序。将它们连接起来后，使得连接的结果和按升序排序后的原数组相同。
+
+返回数组能分成的最多块数量。
+```
+
+### 解题思路
+
+首先原数组排序后肯定是 `arr[i] = i`，那么就想分块排序后等于原数组排序，起码到下标为 i 位置时，最大值要等于 i
+
+其实看样例 2 就很明显
+
+### 代码
