feat: lc 769 code

--- a/每周的题解/13.md
+++ b/每周的题解/13.md
@@ -103,3 +103,20 @@ var numComponents = function (head, nums) {
 其实看样例 2 就很明显
 
 ### 代码
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {number}
+ */
+var maxChunksToSorted = function (arr) {
+	let mx = 0,
+		res = 0;
+	for (let i = 0; i < arr.length; i++) {
+		const cur = arr[i];
+		mx = Math.max(mx, cur);
+		if (mx === i) res++;
+	}
+	return res;
+};
+```
