feat: lc 940. 不同的子序列 II hard

--- a/每周的题解/13.md
+++ b/每周的题解/13.md
@@ -120,3 +120,47 @@ var maxChunksToSorted = function (arr) {
 	return res;
 };
 ```
+
+## 940. 不同的子序列 II
+
+### 题目描述
+
+```js
+给定一个字符串 s，计算 s 的 不同非空子序列 的个数。因为结果可能很大，所以返回答案需要对 10^9 + 7 取余 。
+
+字符串的 子序列 是经由原字符串删除一些（也可能不删除）字符但不改变剩余字符相对位置的一个新字符串。
+
+例如，"ace" 是 "abcde" 的一个子序列，但 "aec" 不是。
+```
+
+### 解题思路
+
+在后面多一个字符时，两种情况：
+
+- 该字符没有出现过时：前面子串的所有情况之和 + 1
+- 出现过了：前面子串的所有情况之和 + 1 - 重复的部分
+
+重复的部分就是 以该字符结尾的子串
+
+dp[i] 就表示以 s[i]为末尾字符的子序列的个数
+
+### 代码
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var distinctSubseqII = function (s) {
+	const MOD = 1000000007;
+	let ans = 0;
+	let dp = new Array(26).fill(0);
+	for (let i = 0; i < s.length; i++) {
+		const cId = s[i].charCodeAt() - 'a'.charCodeAt();
+		const prev = dp[cId];
+		dp[cId] = (ans + 1) % MOD;
+		ans = (((ans + dp[cId] - prev) % MOD) + MOD) % MOD;
+	}
+	return ans;
+};
+```
