feat: lc 1441. 用栈操作构建数组

--- a/每周的题解/13.md
+++ b/每周的题解/13.md
@@ -164,3 +164,57 @@ var distinctSubseqII = function (s) {
 	return ans;
 };
 ```
+
+## 1441. 用栈操作构建数组
+
+### 题目描述
+
+```js
+给你一个数组 target 和一个整数 n。每次迭代，需要从  list = { 1 , 2 , 3 ..., n } 中依次读取一个数字。
+
+请使用下述操作来构建目标数组 target ：
+
+"Push"：从 list 中读取一个新元素， 并将其推入数组中。
+"Pop"：删除数组中的最后一个元素。
+如果目标数组构建完成，就停止读取更多元素。
+题目数据保证目标数组严格递增，并且只包含 1 到 n 之间的数字。
+
+请返回构建目标数组所用的操作序列。如果存在多个可行方案，返回任一即可
+```
+
+### 解题思路
+
+第一眼看去感觉就是简单模拟
+
+简化一下就是从 1~n 中拿数字，**查看目标数组中有没有该数字**，有就 push 完就完事，没有就 push 完再 pop
+
+这个**查看目标数组中有没有该数字**要注意一下，如果每次都用 indexOf 之类的查找，**那效率必然很差**。结合题目规定目标数组严格递增，我们用一个指针就好了
+
+终止条件就是已经构建完成 target 数组
+
+### 代码
+
+```js
+/**
+ * @param {number[]} target
+ * @param {number} n
+ * @return {string[]}
+ */
+var buildArray = function (target, n) {
+	const ss = [],
+		len = target.length;
+	let cnt = 0,
+		t = 0;
+	for (let i = 1; i <= n; i++) {
+		ss.push('Push');
+		if (target[t] === i) {
+			cnt++;
+			t++;
+		} else {
+			ss.push('Pop');
+		}
+		if (cnt === len) break;
+	}
+	return ss;
+};
+```
