feat: lc 886. 可能的二分法

--- a/每周的题解/13.md
+++ b/每周的题解/13.md
@@ -218,3 +218,56 @@ var buildArray = function (target, n) {
 	return ss;
 };
 ```
+
+## 886. 可能的二分法
+
+### 题目描述
+
+```js
+给定一组 n 人（编号为 1, 2, ..., n）， 我们想把每个人分进任意大小的两组。每个人都可能不喜欢其他人，那么他们不应该属于同一组。
+
+给定整数 n 和数组 dislikes ，其中 dislikes[i] = [ai, bi] ，表示不允许将编号为 ai 和  bi的人归入同一组。当可以用这种方法将所有人分进两组时，返回 true；否则返回 false。
+```
+
+### 解题思路
+
+只能分为两组，数组大小不限，只限制 dislikes 的不要在一块
+
+那就是不要有三个人两两互相讨厌
+
+可以用并查集
+
+把 i 讨厌的人都分到一组，如果在之后发现讨厌的人分到一组了就 false
+
+### 代码
+
+```js
+/**
+ * @param {number} n
+ * @param {number[][]} dislikes
+ * @return {boolean}
+ */
+var possibleBipartition = function (n, dislikes) {
+	const fa = new Array(n + 1).fill(0); //并查集
+	for (let i = 0; i <= n; i++) fa[i] = i;
+	const find = x => (x === fa[x] ? x : (fa[x] = find(fa[x])));
+	const merge = (i, j) => {
+		const x = find(i),
+			y = find(j);
+		fa[x] = y;
+	};
+	const isOne = (i, j) => find(i) === find(j);
+	const g = new Array(n + 1).fill(0).map(() => new Array()); //每个人讨厌的所有人的表
+	for (const e of dislikes) {
+		g[e[0]].push(e[1]);
+		g[e[1]].push(e[0]);
+	}
+	for (let i = 1; i <= n; i++) {
+		for (const j of g[i]) {
+			if (isOne(i, j)) return false;
+			merge(j, g[i][0]); //把 i 讨厌的人都分在一组
+		}
+	}
+	return true;
+};
+```
