--- a/每周的题解/13.md
+++ b/每周的题解/13.md
@@ -271,3 +271,102 @@ var possibleBipartition = function (n, dislikes) {
 	return true;
 };
 ```
+
+## 904. 水果成篮
+
+### 题目描述
+
+```js
+你正在探访一家农场，农场从左到右种植了一排果树。这些树用一个整数数组 fruits 表示，其中 fruits[i] 是第 i 棵树上的水果 种类 。
+
+你想要尽可能多地收集水果。然而，农场的主人设定了一些严格的规矩，你必须按照要求采摘水果：
+
+你只有 两个 篮子，并且每个篮子只能装 单一类型 的水果。每个篮子能够装的水果总量没有限制。
+你可以选择任意一棵树开始采摘，你必须从 每棵 树（包括开始采摘的树）上 恰好摘一个水果 。采摘的水果应当符合篮子中的水果类型。每采摘一次，你将会向右移动到下一棵树，并继续采摘。
+一旦你走到某棵树前，但水果不符合篮子的水果类型，那么就必须停止采摘。
+给你一个整数数组 fruits ，返回你可以收集的水果的 最大 数目。
+```
+
+### 解题思路
+
+#### dfs
+
+从左到右遍历树
+dfs 思路：
+
+- 遇到一棵树
+  - 没有篮子是空的
+    - 判断能不能摘
+      - 能摘
+        - 选择摘
+        - 选择不摘（当然，这里没道理不摘）
+      - 不能摘 终止
+  - 还有篮子是空的
+    - 摘
+    - 不摘（后面看清楚题目才发现只要开始摘后是必须摘！）
+
+但是调半天条件后样例里一个 四万个 0 让我破防了，怪不得题解里面没有 dfs 的题解。这 vscode 插件里的题目标签带了个 dfs，真的上当了我。
+
+> 去网站上看，醒目的滑动窗口标签
+
+#### 还得是滑动窗口
+
+题目里说了开始采摘之前可以选择摘或者不摘，开始采摘之后，能摘就必须摘，不能摘就必须停下！一开始真没注意到这个，调试了半天，不知道有没有小伙伴和我一样栽在这里
+
+这就是说明，左边界 l 是可以调整的，之后就是连续地摘，直到右边界 i 受限
+
+### 代码
+
+超时的 dfs
+
+```js
+var totalFruit = function (fruits) {
+	const b = [],
+		len = fruits.length;
+	let mx = -1;
+	const dfs = (i, cnt) => {
+		mx = cnt > mx ? cnt : mx;
+		if (i === len) return;
+		if (b.length === 2) {
+			if (!b.includes(fruits[i])) return;
+			else if (b.includes(fruits[i])) dfs(i + 1, cnt + 1);
+		} else if (b.length < 2) {
+			if (!b.includes(fruits[i])) {
+				b.push(fruits[i]);
+				dfs(i + 1, cnt + 1);
+				b.pop();
+			} else {
+				dfs(i + 1, cnt + 1);
+			}
+		}
+		return;
+	};
+	for (let i = 0; i < len; i++) dfs(i, 0);
+	return mx;
+};
+```
+
+滑动窗口 AC：
+
+```js
+/**
+ * @param {number[]} fruits
+ * @return {number}
+ */
+var totalFruit = function (fruits) {
+	const len = fruits.length;
+	let res = 0;
+	const mp = new Map();
+	for (let i = 0, l = 0; i < len; i++) {
+		const v = fruits[i];
+		mp.set(v, mp.get(v) ? mp.get(v) + 1 : 1);
+		while (mp.size > 2) {
+			const q = fruits[l++];
+			mp.set(q, mp.get(q) - 1);
+			if (mp.get(q) === 0) mp.delete(q);
+		}
+		res = Math.max(res, i - l + 1);
+	}
+	return res;
+};
+```
