feat: lc  1700. 无法吃午餐的学生数量

--- a/每周的题解/14.md
+++ b/每周的题解/14.md
@@ -79,3 +79,48 @@ var atMostNGivenDigitSet = function (digits, n) {
 	}
 	retur
 ```
+
+## 1700. 无法吃午餐的学生数量
+
+### 题目描述
+
+```js
+学校的自助午餐提供圆形和方形的三明治，分别用数字 0 和 1 表示。所有学生站在一个队列里，每个学生要么喜欢圆形的要么喜欢方形的。
+餐厅里三明治的数量与学生的数量相同。所有三明治都放在一个 栈 里，每一轮：
+
+如果队列最前面的学生 喜欢 栈顶的三明治，那么会 拿走它 并离开队列。
+否则，这名学生会 放弃这个三明治 并回到队列的尾部。
+这个过程会一直持续到队列里所有学生都不喜欢栈顶的三明治为止。
+
+给你两个整数数组 students 和 sandwiches ，其中 sandwiches[i] 是栈里面第 i​​​​​​ 个三明治的类型（i = 0 是栈的顶部）， students[j] 是初始队列里第 j​​​​​​ 名学生对三明治的喜好（j = 0 是队列的最开始位置）。请你返回无法吃午餐的学生数量。
+
+
+```
+
+### 解题思路
+
+就是简单的模拟，学生喜爱和栈顶匹配的话就拿走，不匹配的话学生就到队尾去
+
+什么时候会导致有学生吃不了？就是栈顶的三明治没人要了，所有人都搁那轮着排队。所以都不用模拟学生去队尾的过程
+
+等到栈顶的三明治没人要了，剩下的三明治的数量就是没午饭吃的学生数量
+
+怎么表示三明治的数量，就是总数 - 已经从栈顶拿走的数量
+
+### 代码
+
+```js
+/**
+ * @param {number[]} students
+ * @param {number[]} sandwiches
+ * @return {number}
+ */
+var countStudents = function (students, sandwiches) {
+	const need = new Array(2).fill(0); //两种三明治的需求
+	for (const v of students) need[v]++;
+	for (let i = 0; i < sandwiches.length; i++) {
+		if (--need[sandwiches[i]] == -1) return sandwiches.length - i;
+	}
+	return 0;
+};
+```
