feat: lc 779. 第 K 个语法符号

--- a/每周的题解/第四周.md
+++ b/每周的题解/第四周.md
@@ -1,8 +1,6 @@
 `okkjoo-leetcodeHot-byJs`带你用 JS 刷高频面试算法题~ 每周一更新~ 合集仓库：[okkjoo-leetcodeHot-byJs](https://github.com/okkjoo/okkjoo-leetcodeHot-byJs)
 如果你已经按题型分类系统地刷了一遍算法面试题的各个题型，想感受一下面试题的”随机性”的话，欢迎一起~
 
-
-
 这是第四周的刷题记录与题解分享
 
 ---
@@ -13,7 +11,7 @@
 
 ### 题目描述
 
-> 给定一个二叉树的根节点 `root` ，返回 *它的 **中序** 遍历* 。
+> 给定一个二叉树的根节点 `root` ，返回 _它的 **中序** 遍历_ 。
 
 ### 解题思路
 
@@ -56,12 +54,11 @@ var inorderTraversal = function (root) {
 
 > 写一个函数，输入 n ，求斐波那契（Fibonacci）数列的第 n 项（即 F(N)）。斐波那契数列的定义如下：
 >
-> >  F(0) = 0,   F(1) = 1
+> > F(0) = 0, F(1) = 1
 > > F(N) = F(N - 1) + F(N - 2), 其中 N > 1.
 > > 斐波那契数列由 0 和 1 开始，之后的斐波那契数就是由之前的两数相加而得出。
 >
 > 答案需要取模 1e9+7（1000000007），如计算初始结果为：1000000008，请返回 1。
->
 
 ### 解题思路
 
@@ -77,18 +74,16 @@ var inorderTraversal = function (root) {
 
 然后我们又发现，这个定义不就是 dp 里面的状态转移方程嘛
 
-- `dp[i]`表示其代表 斐波那契 第i个数字
+- `dp[i]`表示其代表 斐波那契 第 i 个数字
 - 状态转移方程就是定义
 - 初始化 前两个数字就好了
-  - 第0个就是0
+  - 第 0 个就是 0
 
-甚至因为不需要存储以前的数据，实际上只需要三个变量就可以完成了，空间复杂度O(1)
-
-
+甚至因为不需要存储以前的数据，实际上只需要三个变量就可以完成了，空间复杂度 O(1)
 
 #### 求余
 
-这里要注意的是，他还说了需要取模，取模其实就是求余~  他说对结果取模，你可不能真到最后返回结果的时候取模，要在每一步 sum 发生变化的时候取模
+这里要注意的是，他还说了需要取模，取模其实就是求余~ 他说对结果取模，你可不能真到最后返回结果的时候取模，要在每一步 sum 发生变化的时候取模
 
 ### 代码
 
@@ -110,11 +105,9 @@ var fib = function (n) {
 };
 ```
 
-
-
 ## [104. 二叉树的最大深度](https://leetcode.cn/problems/maximum-depth-of-binary-tree/)|简单|二叉树|递归
 
-###  题目描述
+### 题目描述
 
 > 给定一个二叉树，找出其最大深度。
 >
@@ -124,9 +117,9 @@ var fib = function (n) {
 
 ### 解题思路
 
-解决二叉树问题最好先想递归方法，真的好使，一个DFS就好了
+解决二叉树问题最好先想递归方法，真的好使，一个 DFS 就好了
 
-不过可以扩展一下思路，求深度 用 队列来 BFS  也是不错的。
+不过可以扩展一下思路，求深度 用 队列来 BFS 也是不错的。
 
 1. 用特殊元素划分每一层
 2. 或者在进入下一层之前记录当前队列的长度
@@ -177,18 +170,18 @@ var maxDepth = function (root) {
 
 > ```
 > 给你一个大小为 m x n 的二进制矩阵 grid 。
-> 
+>
 > 岛屿 是由一些相邻的 1 (代表土地) 构成的组合，这里的「相邻」要求两个 1 必须在 水平或者竖直的四个方向上 相邻。你可以假设 grid 的四个边缘都被 0（代表水）包围着。
-> 
+>
 > 岛屿的面积是岛上值为 1 的单元格的数目。
-> 
-> 计算并返回 grid 中最大的岛屿面积。如果没有岛屿，则返回面积为 0 
-> 
+>
+> 计算并返回 grid 中最大的岛屿面积。如果没有岛屿，则返回面积为 0
+>
 > ```
 
 ### 解题思路
 
-小岛问题，DFS 遍历图真是太常用了，直接将访问过的小岛置为0，节省 vis 数组空间
+小岛问题，DFS 遍历图真是太常用了，直接将访问过的小岛置为 0，节省 vis 数组空间
 
 ### 代码
 
@@ -247,6 +240,7 @@ var maxAreaOfIsland = function (grid) {
 操作：
 
 1. put：检查哈希表，查看是否存在
+
    1. 存在：
       1. 更新值
       2. 更新其位置到链表头部
@@ -343,17 +337,17 @@ class LRUCache {
  */
 ```
 
-## [剑指 Offer 22. 链表中倒数第k个节点](https://leetcode.cn/problems/lian-biao-zhong-dao-shu-di-kge-jie-dian-lcof/)|简单|链表|双指针
+## [剑指 Offer 22. 链表中倒数第 k 个节点](https://leetcode.cn/problems/lian-biao-zhong-dao-shu-di-kge-jie-dian-lcof/)|简单|链表|双指针
 
 ### 题目描述
 
-> 输入一个链表，输出该链表中倒数第k个节点。为了符合大多数人的习惯，本题从1开始计数，即链表的尾节点是倒数第1个节点。
+> 输入一个链表，输出该链表中倒数第 k 个节点。为了符合大多数人的习惯，本题从 1 开始计数，即链表的尾节点是倒数第 1 个节点。
 >
 > 例如，一个链表有 6 个节点，从头节点开始，它们的值依次是 1、2、3、4、5、6。这个链表的倒数第 3 个节点是值为 4 的节点。
 
 ### 解题思路
 
-经典快慢指针就好了，先让快指针先走 k 步，然后慢指针再开始走。（都是一个一个走）当快指针到达链表尾节点，慢指针就到倒数第k个节点了
+经典快慢指针就好了，先让快指针先走 k 步，然后慢指针再开始走。（都是一个一个走）当快指针到达链表尾节点，慢指针就到倒数第 k 个节点了
 
 ### 代码
 
@@ -382,7 +376,6 @@ var getKthFromEnd = function (head, k) {
 	}
 	return slow;
 };
-
 ```
 
 ## [209. 长度最小的子数组](https://leetcode.cn/problems/minimum-size-subarray-sum/)|中等|滑动窗口|双指针
@@ -392,7 +385,6 @@ var getKthFromEnd = function (head, k) {
 > 给定一个含有 n 个正整数的数组和一个正整数 target 。
 >
 > 找出该数组中满足其和 ≥ target 的长度最小的 连续子数组 [numsl, numsl+1, ..., numsr-1, numsr] ，并返回其长度。如果不存在符合条件的子数组，返回 0 。
->
 
 ### 解题思路
 
@@ -404,7 +396,7 @@ var getKthFromEnd = function (head, k) {
 
 以及 right 指针的遍历范围
 
-时间复杂度O(n)，空间复杂度O(1)
+时间复杂度 O(n)，空间复杂度 O(1)
 
 ### 代码
 
@@ -443,10 +435,9 @@ var minSubArrayLen = function (target, nums) {
 	return ans;
 };
 // @lc code=end
-
 ```
 
-## [42. 接雨水](https://leetcode.cn/problems/trapping-rain-water/)|困难| 双数组|双指针| 
+## [42. 接雨水](https://leetcode.cn/problems/trapping-rain-water/)|困难| 双数组|双指针|
 
 ### 题目描述
 
@@ -454,17 +445,17 @@ var minSubArrayLen = function (target, nums) {
 
 ### 解题思路
 
-> 之前学校天梯赛选拔就出了这题...当时没ac...唉，要是当时写出来了，说不定现在还在研究算法竞赛，就还没开始彻底开始前端之路哈哈
+> 之前学校天梯赛选拔就出了这题...当时没 ac...唉，要是当时写出来了，说不定现在还在研究算法竞赛，就还没开始彻底开始前端之路哈哈
 
 要求下雨后能装多少水，有坑的地方才能装水嘛
 
 #### 暴力思路
 
-一个x坐标能接多少水，要看自己的高度 `height[x]`，以及左右两侧柱子中最大值中的较小的那个值。（有点绕，可以结合题目中的图理解一下）
+一个 x 坐标能接多少水，要看自己的高度 `height[x]`，以及左右两侧柱子中最大值中的较小的那个值。（有点绕，可以结合题目中的图理解一下）
 
 也就是：
 
-- 能接的水 =  水位 - 自己的高度
+- 能接的水 = 水位 - 自己的高度
 - 自己的高度 = 题目给的 height
 - 水位 = min(leftMax, rightMax)
 
@@ -478,7 +469,7 @@ var minSubArrayLen = function (target, nums) {
 
 `leftMax[i]`就表示 i 左边的最高柱子的高度，leftMax 就从左边开始遍历， rightMax 就从右边开始遍历
 
-时间复杂度O(n)，空间复杂度O(n)。
+时间复杂度 O(n)，空间复杂度 O(n)。
 
 #### 双指针
 
@@ -500,23 +491,21 @@ var minSubArrayLen = function (target, nums) {
 - jleftMax >= i leftMax
 - irhgtMax >= jRightMax
 
->  前面说一次直接算两个柱子可能有点误解，或许应该说是 一次遍历中 两边柱子轮流接水
+> 前面说一次直接算两个柱子可能有点误解，或许应该说是 一次遍历中 两边柱子轮流接水
 
 具体怎么轮流？
 
 取决于哪个自身的高度比较矮，比如 i 比较矮，那就是接 i ，水位取哪一个？取 ileftMax。j 也一样
 
+也就是 要维护的两个变量 ileftMax jrightMax 。双指针 i、j，从两头向中间走就好了
 
-
-也就是 要维护的两个变量    ileftMax  jrightMax 。双指针 i、j，从两头向中间走就好了
-
->  官方题解里的 leftMax 就是最左边的 —— ileftMax，rightMax 就是最右边的 jrightMax
+> 官方题解里的 leftMax 就是最左边的 —— ileftMax，rightMax 就是最右边的 jrightMax
 >
 > 可能这时候看解释还是有点绕 我也不知道怎么表达比较好.. 但是看代码然后结合官方题解里的动画应该能理解
 
-时间复杂度O(n)，空间复杂度O(1)
+时间复杂度 O(n)，空间复杂度 O(1)
 
-> 其他解法都是时间复杂度为 O(n)，空间复杂度为O(n)，这里就不学了
+> 其他解法都是时间复杂度为 O(n)，空间复杂度为 O(n)，这里就不学了
 
 ### 代码
 
@@ -566,3 +555,45 @@ var trap = function (height) {
 };
 ```
 
+## 779. 第 K 个语法符号
+
+### 题目描述
+
+```js
+我们构建了一个包含 n 行( 索引从 1  开始 )的表。首先在第一行我们写上一个 0。接下来的每一行，将前一行中的0替换为01，1替换为10。
+
+例如，对于 n = 3 ，第 1 行是 0 ，第 2 行是 01 ，第3行是 0110 。
+给定行数 n 和序数 k，返回第 n 行中第 k 个字符。（ k 从索引 1 开始）
+```
+
+### 解题思路
+
+稍微自己模拟几次，就会发现一点规律
+![1666228953126](image/第四周/1666228953126.png)
+
+每一行的后半部分就是前半部分的反转，而前半部分就是上一行
+
+那么求第 k 个，如果 k 在后半部分，其实就是求 k 前半部分对应位置字符 k2 的反转，求 k 前半部分对应的反转，其实就是求 k2 前半部分对应的反转...
+
+- k > (n-2)/2 就是在后半部分
+  - 大于就取前半部分对应的位置 k - (n - 2)/2 上的反转 ^
+- 否则就是直接的第 k 个
+
+递归！
+
+终止就是第一个位置肯定是 0
+
+### 代码
+
+```js
+/**
+ * @param {number} n
+ * @param {number} k
+ * @return {number}
+ */
+var kthGrammar = function (n, k) {
+	if (k === 1) return 0;
+	if (k > 1 << (n - 2)) return 1 ^ kthGrammar(n - 1, k - (1 << (n - 2)));
+	return kthGrammar(n - 1, k);
+};
+```
