feat: lc 901. 股票价格跨度|单调栈

--- a/每周的题解/14.md
+++ b/每周的题解/14.md
@@ -124,3 +124,56 @@ var countStudents = function (students, sandwiches) {
 	return 0;
 };
 ```
+
+## 901. 股票价格跨度
+
+### 题目描述
+
+```js
+编写一个 StockSpanner 类，它收集某些股票的每日报价，并返回该股票当日价格的跨度。
+
+今天股票价格的跨度被定义为股票价格小于或等于今天价格的最大连续日数（从今天开始往回数，包括今天）。
+
+例如，如果未来7天股票的价格是 [100, 80, 60, 70, 60, 75, 85]，那么股票跨度将是 [1, 1, 1, 2, 1, 4, 6]。
+```
+
+### 解题思路
+
+j 天往前走，直到前面有一天 i 股票价值**大于**今天
+
+总共的天数就是 j - i，其实就等于两天的下标相减
+
+只要记录上一个大于自己的，中间的每一个实际上都是不需要的 —— 单调栈——栈中存放`[某天的下标, 当天的股票价值]`
+
+中间小于等于自己的都可以不存，全部把它从栈中弹出，下一天 k 要找大于自己的
+
+- k 天小于 j 天，没什么好说的就是 1
+- k 天价值大于 j 天价值，前面删掉的，比 j 天的价值还小，根本无所谓，继续往前找就好了
+
+要注意的就是初始化一个第 0 天方便计算
+
+### 代码
+
+```js
+var StockSpanner = function () {
+	this.idx = -1;
+	this.stk = [[this.idx, Math.pow(10, 5) + 10]];
+};
+
+/**
+ * @param {number} price
+ * @return {number}
+ */
+StockSpanner.prototype.next = function (price) {
+	this.idx++;
+	while (price >= this.stk[this.stk.length - 1][1]) this.stk.pop();
+	this.stk.push([this.idx, price]);
+	return this.idx - this.stk[this.stk.length - 2][0];
+};
+
+/**
+ * Your StockSpanner object will be instantiated and called as such:
+ * var obj = new StockSpanner()
+ * var param_1 = obj.next(price)
+ */
+```
