feat: lc 1768. 交替合并字符串

--- a/每周的题解/14.md
+++ b/每周的题解/14.md
@@ -247,3 +247,45 @@ var jobScheduling = function (startTime, endTime, profit) {
 	return dp[n];
 };
 ```
+
+## 1768. 交替合并字符串
+
+### 题目描述
+
+```
+给你两个字符串 word1 和 word2 。请你从 word1 开始，通过交替添加字母来合并字符串。如果一个字符串比另一个字符串长，就将多出来的字母追加到合并后字符串的末尾。
+
+返回 合并后的字符串 。
+```
+
+### 解题思路
+
+简单双指针模拟，没啥好说的
+
+### 代码
+
+```js
+/**
+ * @param {string} word1
+ * @param {string} word2
+ * @return {string}
+ */
+var mergeAlternately = function (word1, word2) {
+	let i = 0,
+		j = 0;
+	let s = '';
+	const l1 = word1.length,
+		l2 = word2.length;
+	while (i < l1 || j < l2) {
+		s = s + word1[i++];
+		s = s + word2[j++];
+		if (i === l1) {
+			while (j < l2) s = s + word2[j++];
+		}
+		if (j === l2) {
+			while (i < l1) s = s + word1[i++];
+		}
+	}
+	return s;
+};
+```
