feat: lc 915. 分割数组

--- a/每周的题解/14.md
+++ b/每周的题解/14.md
@@ -289,3 +289,48 @@ var mergeAlternately = function (word1, word2) {
 	return s;
 };
 ```
+
+## 915. 分割数组
+
+### 题目描述
+
+```
+
+给定一个数组 nums ，将其划分为两个连续子数组 left 和 right， 使得：
+
+left 中的每个元素都小于或等于 right 中的每个元素。
+left 和 right 都是非空的。
+left 的长度要尽可能小。
+在完成这样的分组后返回 left 的 长度 。
+
+用例可以保证存在这样的划分方法。
+```
+
+### 解题思路
+
+就是找一个分割点，left 数组最大值小于 right 数组最小值
+
+存一个 leftM 为左侧最大值，遍历，如果 nums[i]小于了 leftM，就更新，把 nums[i]放入 left 中，分割点设为 i,left 数组最大值 leftM 更新为当前遍历过程中的最大值
+
+### 代码
+
+```js
+/**
+ * @param {number[]} nums
+ * @return {number}
+ */
+var partitionDisjoint = function (nums) {
+	const n = nums.length;
+	let leftM = nums[0],
+		leftP = 0,
+		curM = nums[0];
+	for (let i = 1; i < n - 1; i++) {
+		curM = Math.max(curM, nums[i]);
+		if (nums[i] < leftM) {
+			leftM = curM;
+			leftP = i;
+		}
+	}
+	return leftP + 1;
+};
+```
