--- a/每周的题解/14.md
+++ b/每周的题解/14.md
@@ -334,3 +334,85 @@ var partitionDisjoint = function (nums) {
 	return leftP + 1;
 };
 ```
+
+## 934. 最短的桥
+
+### 题目描述
+
+```js
+给你一个大小为 n x n 的二元矩阵 grid ，其中 1 表示陆地，0 表示水域。
+
+岛 是由四面相连的 1 形成的一个最大组，即不会与非组内的任何其他 1 相连。grid 中 恰好存在两座岛 。
+
+你可以将任意数量的 0 变为 1 ，以使两座岛连接起来，变成 一座岛 。
+
+返回必须翻转的 0 的最小数目。
+```
+
+### 解题思路
+
+首先，一个岛由所有的连通块组成 —— 第一下我是想到并查集
+
+求最短路径想到 广度优先搜索 BFS，逐层搜索特性就是找到的路一定是最短路
+
+难点在于怎么确定最短路径的起点终点
+
+后来发现其实不必说找到终点，先 DFS 拿到一个岛的所有点，放队列里，然后一个个取出，从这个点一层层 BFS 往外走，碰到的第一个另一个岛屿的点就可以算是最短路径的重点
+
+不用担心起点在岛 1 的内部导致多搜了，因为起点在内部的情况根本走不出去
+
+只有`grid[dx][dy] === 0)`才会往外搜或者遇到`grid[dx][dy] === 1`就是遇到岛 2 了，因为在前面岛 1 全部标记为 `11`了
+
+### 代码
+
+```js
+/**
+ * @param {number[][]} grid
+ * @return {number}
+ */
+var shortestBridge = function (grid) {
+	const d = [-1, 0, 1, 0, -1];
+	const n = grid.length;
+	const que = [];
+	const dfs = (x, y) => {
+		if (x < 0 || y < 0 || x >= n || y >= n || grid[x][y] !== 1) return;
+		que.push([x, y]);
+		grid[x][y] = 11; //标记为岛1的点，剩下为1的都是岛2 的点
+		for (let di = 0; di < 4; di++) dfs(x + d[di], y + d[di + 1]);
+	};
+	for (let i = 0; i < n; i++) {
+		let breakFlag = false;
+		for (let j = 0; j < n; j++) {
+			if (grid[i][j] === 1) {
+				dfs(i, j);
+				breakFlag = true;
+				break;
+			}
+		}
+		if (breakFlag) break;
+	}
+	let step = 0;
+	//BFS
+	while (que.len !== 0) {
+		const sz = que.length;
+		for (let k = 0; k < sz; k++) {
+			const cur = que.shift(); //从队列头部取才保证是在岛1的外层
+			for (let l = 0; l < 4; l++) {
+				const dx = cur[0] + d[l];
+				const dy = cur[1] + d[l + 1];
+				if (dx >= 0 && dy >= 0 && dx < n && dy < n) {
+					if (grid[dx][dy] === 0) {
+						//是海就是边缘，加入队列用于下一次
+						que.push([dx, dy]);
+						grid[dx][dy] = 2; //标记为访问过
+					} else if (grid[dx][dy] === 1)
+						//遇到 岛2 的点了
+						return step;
+				}
+			}
+		}
+		step++;
+	}
+	return 0; //其实题目确保有路的话是不会走到这里的
+};
+```
