feat: lc 907. 子数组的最小值之和|单调栈

--- a/每周的题解/15.md
+++ b/每周的题解/15.md
@@ -106,3 +106,76 @@ var arraySign = function (nums) {
 	return cnt % 2 === 0 ? 1 : -1;
 };
 ```
+
+## 907. 子数组的最小值之和
+
+### 题目描述
+
+```
+给定一个整数数组 arr，找到 min(b) 的总和，其中 b 的范围为 arr 的每个（连续）子数组。
+
+由于答案可能很大，因此 返回答案模 10^9 + 7 。
+```
+
+### 解题思路
+
+就是求 所有的连续子数组中 最小数的 和
+
+暴力的话就是 列举所有连续子数组，min 求出最小数，将所有最小数加起来
+
+但这起码是两重循环，O(N^2)的时间复杂度，数据范围为 3\*10^4，肯定顶不住
+
+值得一提的是，就以例 1 来说，你会发现，只要有 1 的子数组，最小值自然就是 1
+
+那么是不是说，以 1 为核心，向左向右扩散边界，然后在左右边界区间的所有子数组，最小值都是 1 。
+
+其他值也是如此
+
+—— 也就是求出以该元素 x 为最小值的所有连续子数组有 k 个，那他的贡献值就是 `x*k`
+
+至于怎么求左边界，就靠**单调栈**了
+
+> 经典的单调栈问题，即求数组中当前元素 x 左边第一个小于 x 的元素以及右边第一个小于等于 x 的元素
+
+由左到右遍历，如果当前值 >= 单调栈栈顶就不断弹出，直到找到小于当前元素的为止，此时栈顶的元素的下标就是左边界了
+
+右边界？从右到左走一遍就好了
+
+`arr[j],arr[j+1],⋯,arr[k] `的最小元素即为 `arr[i]`，以 `arr[i] `为最小元素的连续子序列的数量为` (i−j)×(k−i)。`
+
+### 代码
+
+```js
+/**
+ * @param {number[]} arr
+ * @return {number}
+ */ var sumSubarrayMins = function (arr) {
+	const n = arr.length;
+	let stk = [];
+	const left = new Array(n).fill(0); // left[i]:以arr[i]为最右且最小元素数目
+	const right = new Array(n).fill(0); // right[i]:以arr[i]为最左且最小元素数目
+	for (let i = 0; i < n; i++) {
+		// <=
+		while (stk.length !== 0 && arr[i] <= arr[stk[stk.length - 1]]) {
+			stk.pop();
+		}
+		left[i] = i - (stk.length === 0 ? -1 : stk[stk.length - 1]);
+		stk.push(i);
+	}
+	stk = [];
+	for (let i = n - 1; i >= 0; i--) {
+		// <
+		while (stk.length !== 0 && arr[i] < arr[stk[stk.length - 1]]) {
+			stk.pop();
+		}
+		right[i] = (stk.length === 0 ? n : stk[stk.length - 1]) - i;
+		stk.push(i);
+	}
+	let ans = 0;
+	const MOD = 1000000007;
+	for (let i = 0; i < n; i++) {
+		ans = (ans + left[i] * right[i] * arr[i]) % MOD;
+	}
+	return ans;
+};
+```
