feat: lc 1773. 统计匹配检索规则的物品数量

--- a/每周的题解/15.md
+++ b/每周的题解/15.md
@@ -179,3 +179,43 @@ var arraySign = function (nums) {
 	return ans;
 };
 ```
+
+## 1773. 统计匹配检索规则的物品数量
+
+### 题目描述
+
+```
+给你一个数组 items ，其中 items[i] = [typei, colori, namei] ，描述第 i 件物品的类型、颜色以及名称。
+
+另给你一条由两个字符串 ruleKey 和 ruleValue 表示的检索规则。
+
+如果第 i 件物品能满足下述条件之一，则认为该物品与给定的检索规则 匹配 ：
+
+ruleKey == "type" 且 ruleValue == typei 。
+ruleKey == "color" 且 ruleValue == colori 。
+ruleKey == "name" 且 ruleValue == namei 。
+统计并返回 匹配检索规则的物品数量 。
+```
+
+### 解题思路
+
+纯纯简单模拟，判断一下找 type 还是 color 还是 name，然后对应一下下标就好了
+
+### 代码
+
+```js
+/**
+ * @param {string[][]} items
+ * @param {string} ruleKey
+ * @param {string} ruleValue
+ * @return {number}
+ */
+var countMatches = function (items, ruleKey, ruleValue) {
+	let ans = 0,
+		idx = ruleKey[0] === 't' ? 0 : ruleKey[0] === 'c' ? 1 : 2;
+	for (const item of items) {
+		if (item[idx] === ruleValue) ans++;
+	}
+	return ans;
+};
+```
