feat: lc 784. 字母大小写全排列

--- a/每周的题解/15.md
+++ b/每周的题解/15.md
@@ -219,3 +219,61 @@ var countMatches = function (items, ruleKey, ruleValue) {
 	return ans;
 };
 ```
+
+## 784. 字母大小写全排列
+
+### 题目描述
+
+```
+给定一个字符串 s ，通过将字符串 s 中的每个字母转变大小写，我们可以获得一个新的字符串。
+
+返回 所有可能得到的字符串集合 。以 任意顺序 返回输出。
+```
+
+### 解题思路
+
+全排列 —— 太回溯算法了
+
+就是暴力，就是搜！
+从左到右遍历：
+
+- c 为数字，过
+- c 为字母，改字母大小写，往后继续；恢复，往后继续
+  其实你直接 dfs，再改字母，dfs 就好，也不用恢复
+- 到头了就加入答案数组
+
+#### 小知识
+
+看了大佬的题解才知道，每个字符大小形式差 32，那么大小写转换可以直接 异或 32
+
+> 因为大小写 ASCII 码只有第六位不同，32 就是 100000
+> 异或 32 就等于 将第六位的 1 改为 0，0 改为 1，其他位 0 还是 0，1 还是 1，太智慧了
+
+> 时空复杂度都是 O(n\*n^2)
+
+### 代码
+
+```js
+/**
+ * @param {string} s
+ * @return {string[]}
+ */
+var letterCasePermutation = function (s) {
+	const ans = [];
+	const dfs = (arr, idx) => {
+		while (idx < arr.length && !isLetter(arr[idx])) idx++;
+		if (idx === arr.length) {
+			ans.push(arr.join(''));
+			return;
+		}
+		dfs(arr, idx + 1, ans);
+		arr[idx] = String.fromCharCode(arr[idx].charCodeAt() ^ 32);
+		dfs(arr, idx + 1, ans);
+	};
+	dfs([...s], 0, ans);
+	return ans;
+};
+const isLetter = ch => {
+	return ('a' <= ch && ch <= 'z') || ('A' <= ch && ch <= 'Z');
+};
+```
