feat: lc 110. 平衡二叉树

--- a/每周的题解/16.md
+++ b/每周的题解/16.md
@@ -40,3 +40,57 @@ var arrayStringsAreEqual = function (word1, word2) {
 	return join(word1) === join(word2);
 };
 ```
+
+## 110. 平衡二叉树
+
+### 题目描述
+
+```
+给定一个二叉树，判断它是否是高度平衡的二叉树。
+
+本题中，一棵高度平衡二叉树定义为：
+
+一个二叉树每个节点 的左右两个子树的高度差的绝对值不超过 1 。
+```
+
+### 解题思路
+
+从上到下：递归遍历暴力获取当前节点最大深度，判断当前子树是否平衡+左右子树是否平衡，简单，但时间复杂度可能为 O(NlogN)—— **因为每层高度都要重复计算**
+
+```js
+var isBalanced = function (root) {
+	if (root === null) return true;
+	const depth = root => {
+		if (root === null) return 0;
+		return Math.max(depth(root.left), depth(root.right)) + 1;
+	};
+	return (
+		Math.abs(depth(root.left) - depth(root.right)) <= 1 &&
+		isBalanced(root.left) &&
+		isBalanced(root.right)
+	);
+};
+```
+
+从下到上：从底到顶返回子树最大高度，如果子树不是平衡树就直接 false 了
+左右子树高度差大于等于 2，直接返回-1 表示不行
+
+不然就返回左右子树中深的那个长度+1（每个节点都能利用到之前计算过的）
+
+> 后序遍历的意思
+
+### 代码
+
+```js
+var isBalanced = function (root) {
+	const recur = root => {
+		if (root === null) return 0;
+		const left = recur(root.left);
+		if (left === -1) return -1;
+		const right = recur(root.right);
+		if (right === -1) return -1;
+		return Math.abs(left - right) < 2 ? Math.max(left, right) + 1 : -1;
+	};
+	return recur(root) !== -1;
+};
+```
