--- a/每周的题解/16.md
+++ b/每周的题解/16.md
@@ -94,3 +94,50 @@ var isBalanced = function (root) {
 	return recur(root) !== -1;
 };
 ```
+
+## 1668. 最大重复子字符串
+
+### 题目描述
+
+```
+给你一个字符串 sequence ，如果字符串 word 连续重复 k 次形成的字符串是 sequence 的一个子字符串，那么单词 word 的 重复值为 k 。单词 word 的 最大重复值 是单词 word 在 sequence 中最大的重复值。如果 word 不是 sequence 的子串，那么重复值 k 为 0 。
+
+给你一个字符串 sequence 和 word ，请你返回 最大重复值 k 。
+```
+
+### 解题思路
+
+简单题，一眼暴力 —— 但是为什么题解这么 hard 啊！！
+
+选择学会中庸解法 —— 枚举 + DP
+
+`dp[i]`表示字符串 word 在第 i 个位置最后一次出现时的最大重复值
+那么`dp[i]` = `dp[i - word.length] + 1`
+
+当然要满足一些情况，上代码吧
+
+> 当然，还有一种 kmp 算法 —— 但是我学了好几次终究忘记了，淦，不想学了
+
+### 代码
+
+```js
+var maxRepeating = function (sequence, word) {
+	const n = sequence.length,
+		m = word.length;
+	if (n < m) return 0;
+	const dp = new Array(n).fill(0);
+	for (let i = m - 1; i < n; i++) {
+		let flag = true;
+		for (let j = 0; j < m; j++) {
+			if (sequence[i - m + j + 1] !== word[j]) {
+				flag = false;
+				break;
+			}
+			if (!flag) b.push;
+		}
+		if (flag) dp[i] = i === m - 1 ? 1 : dp[i - m] + 1;
+	}
+	const max = arr => arr.reduce((mx, x) => (mx > x ? mx : x), 0);
+	return max(dp);
+};
+```
