--- a/每周的题解/22.11月daily.md
+++ b/每周的题解/22.11月daily.md
@@ -194,3 +194,44 @@ var reachNumber = function (target) {
 	}
 };
 ```
+
+## 11.29|1758. 生成交替二进制字符串的最少操作数|简单
+
+### 题目描述
+
+```
+给你一个仅由字符 '0' 和 '1' 组成的字符串 s 。一步操作中，你可以将任一 '0' 变成 '1' ，或者将 '1' 变成 '0' 。
+
+交替字符串 定义为：如果字符串中不存在相邻两个字符相等的情况，那么该字符串就是交替字符串。例如，字符串 "010" 是交替字符串，而字符串 "0100" 不是。
+
+返回使 s 变成 交替字符串 所需的 最少 操作数。
+```
+
+### 解题思路
+
+不从细节下手看每一个相邻，直接从结果出发
+
+最终结果无非就是
+
+1. `101010101...`
+2. `0101010101...`
+
+那就将原字符串和这两分别对比，计算哪一个差异最小就行了
+
+### 代码
+
+```js
+/**
+ * @param {string} s
+ * @return {number}
+ */
+var minOperations = function (s) {
+	let cnt1 = 0,
+		cnt2 = 0;
+	for (let i = 0; i < s.length; i++) {
+		if (i & 1) s[i] === '0' ? cnt1++ : cnt2++;
+		else s[i] === '1' ? cnt1++ : cnt2++;
+	}
+	return Math.min(cnt1, cnt2);
+};
+```
