feat: leetcode 补充141循环链表 奇妙解法

--- a/每周的题解/第二周.md
+++ b/每周的题解/第二周.md
@@ -570,6 +570,14 @@ var longestPalindrome = function (s) {
 
 时间复杂度 O(n),空间复杂度 O(1)
 
+#### 奇技淫巧之 JSON.stringfy
+
+这个不属于数据结构范畴了，而是 Javascript 这门的语言基础的理解
+`JSON.stringfy`什么特性？不能序列化一个不安全的 JSON 值——undefined、function、symbol、对象循环引用，都不行
+
+而 JS 中链表，不就是对象？那循环链表，不就是循环引用?
+直接 try、catch 包起来~
+
 ### 代码
 
 ```js
@@ -594,6 +602,15 @@ var hasCycle = function (head) {
 		if (fast == slow) return true;
 	}
 	return false;
+};
+
+var hasCycle = function (head) {
+	try {
+		JSON.stringify(head);
+	} catch {
+		return false;
+	}
+	return true;
 };
 ```
 
